--- a/src/components/nav-bar.css
+++ b/src/components/nav-bar.css
@@ -8,7 +8,7 @@
 }
 
 /* mobile */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   .nav-bar {
 		flex-wrap: wrap;
   }
