--- a/src/components/section-header.css
+++ b/src/components/section-header.css
@@ -3,15 +3,15 @@
 .section-header {
 	display: grid;
   font-size: 1em;
-  grid-template-columns: minmax(1em, calc(50% - 1em)) 26em 37em minmax(2em, calc(50% - 2em));
+  grid-template-columns: auto 1fr 1fr auto;
   column-gap: 1.5em;
   grid-template-areas:
-    ". header        code-spacer ."
-    ". introduction  code-spacer .";
+    ". header        code-spacer code-spacer"
+    ". introduction  code-spacer code-spacer";
 }
 
 /* mobile */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   .section-header {
     grid-template-columns: auto 1fr auto;
     grid-template-areas:
